[gd_scene load_steps=12 format=3 uid="uid://cgh6yc5t2g2dm"]

[ext_resource type="Script" path="res://scripts/playerUI.gd" id="1_1msmn"]
[ext_resource type="Texture2D" uid="uid://yagjecy4kmvj" path="res://placeholders/Varus.png" id="2_ipvo5"]
[ext_resource type="Texture2D" uid="uid://c84ofqvwq5d2q" path="res://placeholders/Briar.png" id="3_s7m57"]
[ext_resource type="Texture2D" uid="uid://das1ui4i1vku5" path="res://placeholders/Gwen.png" id="4_csbah"]
[ext_resource type="Texture2D" uid="uid://c25xlrq1e68ey" path="res://placeholders/6_dots.png" id="5_sutfl"]
[ext_resource type="Texture2D" uid="uid://ba5evuhmmyav5" path="res://placeholders/5_dots.png" id="6_bvkpt"]
[ext_resource type="PackedScene" uid="uid://dvuyjt58vc752" path="res://scenes/sell_area.tscn" id="7_ope57"]
[ext_resource type="PackedScene" uid="uid://l75k17vh6121" path="res://scenes/dice_slot.tscn" id="9_88mbw"]
[ext_resource type="PackedScene" uid="uid://c605wpvjnlyc" path="res://scenes/bench_slot.tscn" id="11_kyo6d"]
[ext_resource type="PackedScene" uid="uid://b68xwnk4mkwgh" path="res://scenes/board_slot.tscn" id="13_e72im"]
[ext_resource type="Script" path="res://scenes/ready_button.gd" id="15_mfbpx"]

[node name="playerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_1msmn")

[node name="shopUI" type="CanvasLayer" parent="."]
layer = -1

[node name="unitShop" type="GridContainer" parent="shopUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 660.0
offset_top = 336.0
offset_right = 172.0
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
mouse_filter = 2
theme_override_constants/h_separation = 16
columns = 6

[node name="shopslot1" type="TextureRect" parent="shopUI/unitShop"]
layout_mode = 2
texture = ExtResource("2_ipvo5")

[node name="Button1" type="Button" parent="shopUI/unitShop/shopslot1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.983
offset_bottom = 0.0399933
grow_horizontal = 2
grow_vertical = 2

[node name="shopslot2" type="TextureRect" parent="shopUI/unitShop"]
layout_mode = 2
texture = ExtResource("3_s7m57")

[node name="Button2" type="Button" parent="shopUI/unitShop/shopslot2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.983
offset_bottom = 0.0399933
grow_horizontal = 2
grow_vertical = 2

[node name="shopslot3" type="TextureRect" parent="shopUI/unitShop"]
layout_mode = 2
texture = ExtResource("4_csbah")

[node name="Button3" type="Button" parent="shopUI/unitShop/shopslot3"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.983
offset_bottom = 0.0399933
grow_horizontal = 2
grow_vertical = 2

[node name="shopslot4" type="TextureRect" parent="shopUI/unitShop"]
layout_mode = 2
texture = ExtResource("2_ipvo5")

[node name="Button4" type="Button" parent="shopUI/unitShop/shopslot4"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.983
offset_bottom = 0.0399933
grow_horizontal = 2
grow_vertical = 2

[node name="shopslot5" type="TextureRect" parent="shopUI/unitShop"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("2_ipvo5")

[node name="Button5" type="Button" parent="shopUI/unitShop/shopslot5"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.983
offset_bottom = 0.0399933
grow_horizontal = 2
grow_vertical = 2

[node name="diceShop" type="GridContainer" parent="shopUI"]
offset_left = 632.0
offset_top = 424.0
offset_right = 904.0
offset_bottom = 552.001
scale = Vector2(0.6, 0.6)
theme_override_constants/h_separation = 16
columns = 2

[node name="diceshopslot1" type="TextureRect" parent="shopUI/diceShop"]
layout_mode = 2
texture = ExtResource("5_sutfl")

[node name="DButton1" type="Button" parent="shopUI/diceShop/diceshopslot1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.983
offset_bottom = 0.0399933
grow_horizontal = 2
grow_vertical = 2

[node name="diceshopslot2" type="TextureRect" parent="shopUI/diceShop"]
layout_mode = 2
texture = ExtResource("6_bvkpt")

[node name="DButton2" type="Button" parent="shopUI/diceShop/diceshopslot2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.983
offset_bottom = 0.0399933
grow_horizontal = 2
grow_vertical = 2

[node name="sellArea" parent="shopUI" instance=ExtResource("7_ope57")]
offset_left = 824.0
offset_top = 447.0
offset_right = 952.0
offset_bottom = 575.0

[node name="RerollButton" type="Button" parent="shopUI"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 639.0
offset_top = 525.0
offset_right = -361.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "REROLL"

[node name="gold" type="Label" parent="shopUI"]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_bottom = 83.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 60
text = "Gold:29"

[node name="boardUI" type="CanvasLayer" parent="."]
layer = -2

[node name="diceGrid" type="GridContainer" parent="boardUI"]
offset_left = 744.0
offset_top = 88.0
offset_right = 974.0
offset_bottom = 198.0
theme_override_constants/h_separation = 10
columns = 2

[node name="diceSlot" parent="boardUI/diceGrid" instance=ExtResource("9_88mbw")]
layout_mode = 2

[node name="diceSlot2" parent="boardUI/diceGrid" instance=ExtResource("9_88mbw")]
layout_mode = 2

[node name="benchGrid" type="GridContainer" parent="boardUI"]
anchors_preset = -1
anchor_left = 0.542
anchor_top = 0.321
anchor_right = 0.95
anchor_bottom = 0.491
offset_left = -0.384033
offset_top = -0.00801086
offset_right = -0.400024
offset_bottom = -0.16803
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="benchSlot1" parent="boardUI/benchGrid" instance=ExtResource("11_kyo6d")]
layout_mode = 2

[node name="benchSlot2" parent="boardUI/benchGrid" instance=ExtResource("11_kyo6d")]
layout_mode = 2

[node name="benchSlot3" parent="boardUI/benchGrid" instance=ExtResource("11_kyo6d")]
layout_mode = 2

[node name="benchSlot4" parent="boardUI/benchGrid" instance=ExtResource("11_kyo6d")]
layout_mode = 2

[node name="boardGrid" type="GridContainer" parent="boardUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 104.0
offset_top = 88.0
offset_right = -578.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="boardSlot1" parent="boardUI/boardGrid" instance=ExtResource("13_e72im")]
layout_mode = 2

[node name="boardSlot2" parent="boardUI/boardGrid" instance=ExtResource("13_e72im")]
layout_mode = 2

[node name="boardSlot3" parent="boardUI/boardGrid" instance=ExtResource("13_e72im")]
layout_mode = 2

[node name="boardSlot4" parent="boardUI/boardGrid" instance=ExtResource("13_e72im")]
layout_mode = 2

[node name="boardSlot5" parent="boardUI/boardGrid" instance=ExtResource("13_e72im")]
layout_mode = 2

[node name="boardSlot6" parent="boardUI/boardGrid" instance=ExtResource("13_e72im")]
layout_mode = 2

[node name="boardSlot7" parent="boardUI/boardGrid" instance=ExtResource("13_e72im")]
layout_mode = 2

[node name="boardSlot8" parent="boardUI/boardGrid" instance=ExtResource("13_e72im")]
layout_mode = 2

[node name="boardSlot9" parent="boardUI/boardGrid" instance=ExtResource("13_e72im")]
layout_mode = 2

[node name="readyButton" type="Button" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_top = 0.813
anchor_right = 0.976
anchor_bottom = 0.9
offset_left = -0.200012
offset_top = 0.175964
offset_right = -0.352051
offset_bottom = -0.200012
theme_override_font_sizes/font_size = 30
text = "FIGHT!"
script = ExtResource("15_mfbpx")

[connection signal="update_board" from="." to="." method="_on_update_board"]
[connection signal="pressed" from="shopUI/unitShop/shopslot1/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="shopUI/unitShop/shopslot2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="shopUI/unitShop/shopslot3/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="shopUI/unitShop/shopslot4/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="shopUI/unitShop/shopslot5/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="shopUI/diceShop/diceshopslot1/DButton1" to="." method="_on_d_button_1_pressed"]
[connection signal="pressed" from="shopUI/diceShop/diceshopslot2/DButton2" to="." method="_on_d_button_2_pressed"]
[connection signal="pressed" from="shopUI/RerollButton" to="." method="_on_reroll_button_pressed"]
[connection signal="pressed" from="readyButton" to="." method="_on_ready_button_pressed"]
